# aws_iot_testclient

./: CMakeLists.txt  agent.cfg  main.cpp  makeAgent.sh  start.sh
